# sara/models/object.go
@@ -2,7 +2,6 @@ package models
 
 import (
 	"database/sql"
-	"errors"
 	"fmt"
 	"regexp"
 
@@ -84,26 +83,3 @@ func HashPassword(password string) (string, error) {
 //     err := bcrypt.CompareHashAndPassword([]byte(hash), []byte(password))
 //     return err == nil
 // }
-
-func GetOne(ObjectId string) (object *Object, err error) {
-	if v, ok := Objects[ObjectId]; ok {
-		return v, nil
-	}
-	return nil, errors.New("ObjectId Not Exist")
-}
-
-func GetAll() map[string]*Object {
-	return Objects
-}
-
-// func Update(ObjectId string, Score int64) (err error) {
-// 	if v, ok := Objects[ObjectId]; ok {
-// 		v.Score = Score
-// 		return nil
-// 	}
-// 	return errors.New("ObjectId Not Exist")
-// }
-
-func Delete(ObjectId string) {
-	delete(Objects, ObjectId)
-}
